@@ -13,6 +13,10 @@ colour 41 15 233     # XML nodes;               white on light black
 colour 42 45 233     # XML attributes;          light blue on black
 colour 43 123 233    # XML namespaces;          light blue on black
 
+colour 44 white 52   # 80-char column marker    white on very dark red
+
+view.column_markers.margin.format 44
+
 # Diakonos help files
 
 lang.dhf.format.default white
