@@ -4,6 +4,28 @@ logfile ~/.diakonos/diakonos.log
 
 #session.default_session default-session
 
+# ---------------------------------------------------------------------
+# Colour Definitions
+#
+# colour <integer greater than 7> <foreground colour> <background colour>
+#
+# For a list of colour names, see the list of format codes in the
+# Language Definitions section, below.
+#
+# With this colour command you can set a different background colour than the
+# terminal default.
+#
+# color is a synonym for colour.
+colour 8 white blue
+colour 9 white red
+colour 10 white magenta
+colour 11 yellow blue
+colour 12 white green
+colour 13 white brown
+colour 14 black cyan
+colour 15 yellow red
+
+
 # When the cursor is view.margin.y lines or less from the top or
 # bottom line, repeatedly scroll the screen view.jump.y lines until
 # the cursor is more than view.margin.y lines from the top and
@@ -25,6 +47,9 @@ view.line_numbers.width 4
 # view.line_numbers.number_format is a "printf" style format string
 view.line_numbers.number_format "%3s "
 view.line_numbers.format white
+
+#view.column_markers.margin.column 80
+view.column_markers.margin.format 9
 
 # bol_behaviour: This specifies where the cursor should go when the
 # beginning-of-line key (the default is the Home key) is pressed.
@@ -412,27 +437,6 @@ key keycode319         operateOnLines
 #key ctrl+x ctrl+c;quit
 #key ctrl+x ctrl+f;openFileAsk
 #key ctrl+x ctrl+s;saveFile
-
-# ---------------------------------------------------------------------
-# Colour Definitions
-#
-# colour <integer greater than 7> <foreground colour> <background colour>
-#
-# For a list of colour names, see the list of format codes in the
-# Language Definitions section, below.
-#
-# With this colour command you can set a different background colour than the
-# terminal default.
-#
-# color is a synonym for colour.
-colour 8 white blue
-colour 9 white red
-colour 10 white magenta
-colour 11 yellow blue
-colour 12 white green
-colour 13 white brown
-colour 14 black cyan
-colour 15 yellow red
 
 # ---------------------------------------------------------------------
 # Language Definitions
